changeed nav color from gray to black, this fixes the contrast erros and makes nav easier to read.

--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -69,7 +69,7 @@ nav a:hover {
 }
 
 nav a:link, nav a:visited {
-  color: var(--gray);
+  color: var(black);
 }
 
 .footer-words {
